# Puzzles

./: .gitignore
AOC/: .gitignore  LICENSE  ReadME.md
AOC/Y20/src/: D1.java  D10.java  D11.java  D12.java  D13.java  D14.java  D15.java  D16.java  D17.java  D18.java  D19.java  D2.java  D3.java  D4.java  D5.java  D6.java  D7.java  D8.java  D9.java  Main.java
AOC/Y21/: Cargo.toml  ReadME.md
AOC/Y22/: .clang-tidy  .gitignore  CMakeLists.txt  check.sh
AOC/Y22/src/: main.cpp
AOC/Y22/src/D1/: sol1.cpp  sol1.h
AOC/Y22/src/D10/: sol10.cpp  sol10.h
AOC/Y22/src/D11/: sol11.cpp  sol11.h
AOC/Y22/src/D12/: sol12.cpp  sol12.h
AOC/Y22/src/D2/: sol2.cpp  sol2.h
AOC/Y22/src/D3/: sol3.cpp  sol3.h
AOC/Y22/src/D4/: sol4.cpp  sol4.h
AOC/Y22/src/D5/: sol5.cpp  sol5.h
AOC/Y22/src/D6/: sol6.cpp  sol6.h
AOC/Y22/src/D7/: sol7.cpp  sol7.h
AOC/Y22/src/D8/: sol8.cpp  sol8.h
AOC/Y22/src/D9/: sol9.cpp  sol9.h
AOC/Y22/src/utils/: utils.cpp  utils.h
AOC/Y22/tests/: test_sol1.cpp
AOC/Y25/: d1.py  d10.py  d11.py  d12.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py
Leet/: ReadME.md
Leet/Elixir/: p_258.ex
Leet/Ruby/: p_1.rb  p_1832.rb  p_2974.rb  p_387.rb
ProjectEuler/: README.md  recover.md
ProjectEuler/P0_50/: p_0.jl  p_11.jl  p_13.jl  p_14.jl  p_15.jl  p_16.jl  p_17.jl  p_2.jl  p_3.jl  p_6.jl  p_8.jl  p_9.jl  problem_1.jl  problem_10.jl  problem_12.jl  problem_4.jl  problem_5.jl  problem_7.jl
Y24/1/: p1.py
Y24/2/: py1.py
Y24/3/: py2.py
Y24/4/: py1.py
Y24/5/: py1.py
Y24/6/: py1.py  py2.py
Y24/7/: py1.py  py2.py
Y24/8/: py2.py
(+73 files in other folders)
